--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "codecov" : "*",
     "coveralls" : "*",
     "istanbul" : "*",
     "mocha": "*",
